@@ -16,6 +16,8 @@ rtcontrib - compute contribution coefficients in a RADIANCE scene
 .B "\-o ospec"
 ][
 .B "\-b binv"
+][
+.B "\-bn nbins"
 ]
 {
 .B "\-m mod | \-M file"
@@ -85,8 +87,13 @@ this will be applied to a "%d" format in the output file
 specification if present.
 The actual bin number is computed at run time based on ray direction
 and surface intersection, as described below.
+If the number of bins is known in advance, it should be specified with the
+.I \-bn
+option, especially for output files containing multiple bins.
+Set this to 0 if the number of bins is unknown (the default).
 The most recent
-.I \-b
+.I \-b,
+.I \-bn
 and
 .I \-o
 options to the left of each
